--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,8 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
+RewriteRule ^index/?$ index.php?controller=index [L]
+
 RewriteRule ^Grafik/?$ index.php?controller=Grafik [L]
 RewriteRule ^Grafik/insert/?$ index.php?controller=Grafik&action=insert [L]
 RewriteRule ^Grafik/delete/(\d+)/?$ index.php?controller=Grafik&action=delete&id=$1 [L]
