Dodane kategorie; Wyszukiwarka

--- a/.htaccess
+++ b/.htaccess
@@ -18,10 +18,16 @@ RewriteRule ^Categories/add/?$ index.php?controller=Categories&action=add [L]
 RewriteRule ^Towar/?$ index.php?controller=Towar [L]
 RewriteRule ^Towar/freeze/?$ index.php?controller=Towar&action=freezed [L]
 RewriteRule ^Towar/delete/(\d+)/?$ index.php?controller=Towar&action=delete&id=$1 [L]
+RewriteRule ^Szukaj/?$ index.php?controller=Towar&action=search [L]
 
 RewriteRule ^Zamowienie/?$ index.php?controller=Zamowienie [L]
 RewriteRule ^Zamowienie/add/?$ index.php?controller=Zamowienie&action=add [L]
 RewriteRule ^Zamowienie/insert/?$ index.php?controller=Zamowienie&action=insert [L]
+
+RewriteRule ^Kategoria/?$ index.php?controller=Kategoria [L]
+RewriteRule ^Kategoria/Usun/(\d+)/?$ index.php?controller=Kategoria&action=delete&id=$1 [L]
+RewriteRule ^Kategoria/Edytuj/(\d+)/?$ index.php?controller=Kategoria&action=edit&id=$1 [L]
+RewriteRule ^Kategoria/Wstaw/?$ index.php?controller=Kategoria&action=insert [L]
 
 
 RewriteRule ^Pracownicy/?$ index.php?controller=Pracownicy [L]
