--- a/.htaccess
+++ b/.htaccess
@@ -19,6 +19,9 @@ RewriteRule ^Categories/install/?$ index.php?controller=Categories&action=instal
 RewriteRule ^Grafik/delete/(\d+)/?$ index.php?controller=Grafik&action=delete&id=$1 [L]
 RewriteRule ^Categories/add/?$ index.php?controller=Categories&action=add [L]
 
+RewriteRule ^Cennik/?$ index.php?controller=Cennik [L]
+RewriteRule ^Cennik/insert?$ index.php?controller=Cennik&action=insert [L]
+
 RewriteRule ^Towar/?$ index.php?controller=Towar [L]
 RewriteRule ^Towar/add/?$ index.php?controller=Towar&action=add [L]
 RewriteRule ^Towar/insert/?$ index.php?controller=Towar&action=insert [L]
