--- a/.htaccess
+++ b/.htaccess
@@ -21,8 +21,9 @@ RewriteRule ^Categories/add/?$ index.php?controller=Categories&action=add [L]
 
 
 RewriteRule ^Cennik/?$ index.php?controller=Cennik [L]
-RewriteRule ^Cennik/insert?$ index.php?controller=Cennik&action=insert [L]
-RewriteRule ^Cennik/insertNew?$ index.php?controller=Cennik&action=insertNew [L]
+RewriteRule ^Cennik/insert/?$ index.php?controller=Cennik&action=insert [L]
+RewriteRule ^Cennik/insertNew/?$ index.php?controller=Cennik&action=insertNew [L]
+RewriteRule ^Cennik/historiaCeny/(\d+)/?$ index.php?controller=Cennik&action=historiaCeny&id=$1 [L]
 
 
 RewriteRule ^Towar/?$ index.php?controller=Towar [L]
